Modified and added TestCase for KeyManager class