@@ -5,11 +5,12 @@ import com.igot.cb.authentication.model.KeyData;
 
 import com.igot.cb.transactional.util.Constants;
 import com.igot.cb.transactional.util.PropertiesCache;
+import jakarta.annotation.PostConstruct;
+import lombok.extern.slf4j.Slf4j;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 
-import javax.annotation.PostConstruct;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -17,6 +18,7 @@ import java.nio.file.Paths;
 import java.security.KeyFactory;
 import java.security.PublicKey;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -26,13 +28,16 @@ import java.util.stream.Stream;
 /**
  * @author Mahesh RV
  */
+@Slf4j
 @Component
 public class KeyManager {
 
-    private static final Logger logger = LoggerFactory.getLogger(KeyManager.class.getName());
-    private static final PropertiesCache propertiesCache = PropertiesCache.getInstance();
+    private final PropertiesCache propertiesCache;
+    private final Map<String, KeyData> keyMap = new HashMap<>();
 
-    private static final Map<String, KeyData> keyMap = new HashMap<>();
+    public KeyManager(PropertiesCache propertiesCache) {
+        this.propertiesCache = propertiesCache;
+    }
 
     @PostConstruct
     public void init() {
@@ -40,7 +45,7 @@ public class KeyManager {
         String basePath = propertiesCache.getProperty(Constants.ACCESS_TOKEN_PUBLICKEY_BASEPATH);
         try (Stream<Path> walk = Files.walk(Paths.get(basePath))) {
             List<String> result =
-                    walk.filter(Files::isRegularFile).map(Path::toString).toList();
+                    walk.filter(Files::isRegularFile).map(Path::toString).collect(Collectors.toList());
             result.forEach(file -> {
                 try {
                     Path path = Paths.get(file);
@@ -50,11 +55,11 @@ public class KeyManager {
                     // Store the KeyData object in the keyMap
                     keyMap.put(path.getFileName().toString(), keyData);
                 } catch (Exception e) {
-                    logger.error("KeyManager:init: exception in reading public keys ", e);
+                    log.error("KeyManager:init: exception in reading public keys ", e);
                 }
             });
         } catch (Exception e) {
-            logger.error("KeyManager:init: exception in loading publickeys ", e);
+            log.error("KeyManager:init: exception in loading publickeys ", e);
         }
     }
 
@@ -71,16 +76,15 @@ public class KeyManager {
      * @throws Exception If there's an error during the loading process
      */
     public static PublicKey loadPublicKey(String key) throws Exception {
-        String publicKey = new String(key.getBytes(), StandardCharsets.UTF_8);
         // Remove header and footer from the key string
-        publicKey = publicKey.replaceAll("(-+BEGIN PUBLIC KEY-+)", "");
-        publicKey = publicKey.replaceAll("(-+END PUBLIC KEY-+)", "");
-        publicKey = publicKey.replaceAll("[\\r\\n]+", "");
-        // Decode the key string from Base64
-        byte[] keyBytes = Base64Util.decode(publicKey.getBytes("UTF-8"), Base64Util.DEFAULT);
-        // Convert the key bytes to a PublicKey object
-        X509EncodedKeySpec x509publicKey = new X509EncodedKeySpec(keyBytes);
-        KeyFactory kf = KeyFactory.getInstance("RSA");
-        return kf.generatePublic(x509publicKey);
+        String cleanedKey = key.replaceAll("(-+BEGIN PUBLIC KEY-+)", "")
+                .replaceAll("(-+END PUBLIC KEY-+)", "")
+                .replaceAll("[\\r\\n]+", "");
+        // Decode Base64 content
+        byte[] keyBytes = Base64.getDecoder().decode(cleanedKey);
+        // Generate PublicKey object
+        X509EncodedKeySpec spec = new X509EncodedKeySpec(keyBytes);
+        KeyFactory keyFactory = KeyFactory.getInstance("RSA");
+        return keyFactory.generatePublic(spec);
     }
 }
